Spacing issues resolved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,26 @@
 form {
    float: right;
+   margin-top: 25px;
+   background-color: rgb(255, 242, 220);
+   padding: 20px;
+   border: 5px solid rgb(131, 98, 36);
+   margin-right: 13%;
+}
+img {
+
+}
+#container {
+   padding: 0px;
+   max-width: 720px;
+}
+p {
+   line-height: 20px;
+   margin-top: 20px;
 }
 
 #countries-view {
-   margin-top: 30px;
+   margin-top: 20px;
+   float: left;
 }
 button {
    font-size: 16px;
@@ -14,7 +31,7 @@ button {
    margin-left: 7px;
    margin-right: 7px;
    border-radius: 5px;
-   border: 3px rgb(205, 238, 255);
+   border: 5px rgb(205, 238, 255);
    transition-duration: 0.9s;
   -webkit-transition-duration: 0.9s;
   -moz-transition-duration: 0.9s;
@@ -26,20 +43,20 @@ button:hover {
    margin-left: 7px;
    margin-right: 7px;
    border-radius: 5px;
-   border: 3px rgb(239, 250, 255);
+   border: 5px rgb(239, 250, 255);
    transition-duration: 0.9s;
    -webkit-transition-duration: 0.9s;
    -moz-transition-duration: 0.9s;
 }
 button:active {
    background-color: rgba(132, 134, 3, 0.623);
-   font-weight: 600
+   font-weight: 600;
    margin: 5px;
    color: rgb(95, 0, 0);
    margin-left: 7px;
    margin-right: 7px;
    border-radius: 5px;
-   border: 3px rgb(239, 250, 255);
+   border: 5px rgb(239, 250, 255);
    transition-duration: 0.1s;
    -webkit-transition-duration: 0.1s;
    -moz-transition-duration: 0.1s;
@@ -50,6 +67,5 @@ button:active {
 }
 body {
    height: 100%;
-
    background-color: rgb(255, 234, 195);
 }
